feat: Update ViewAllFilms method and add filter
