# internal/film/endpoints/viewAllFilms.go
@@ -6,8 +6,12 @@ import (
 	"film-management/internal/film/domain/models"
 	"film-management/pkg/query"
 	"film-management/pkg/query/pagination"
+	"film-management/pkg/query/sort"
+	"film-management/pkg/validation"
+	"fmt"
 	"github.com/go-kit/kit/endpoint"
 	"github.com/google/uuid"
+	"strings"
 	"time"
 )
 
@@ -19,7 +23,47 @@ func MakeViewAllFilmsEndpoint(s domain.Service) endpoint.Endpoint {
 			return ViewAllFilmsResponse{}, ErrInvalidRequest
 		}
 
-		if items, p, errViewAllFilms := s.ViewAllFilms(ctx, reqForm.FilterSortLimit); errViewAllFilms != nil {
+		// Validate form
+		if errValidate := reqForm.Validate(); errValidate != nil {
+			return ViewAllFilmsResponse{Err: errValidate}, nil
+		}
+
+		// Build FilterSortLimit
+		builder := query.NewFilterSortLimitBuilder()
+
+		// Get sort
+		sortOption, err := sort.GetSortOptions(reqForm.Sort, []string{"title", "release_date"}, "release_date.desc")
+		if err != nil {
+			return ViewAllFilmsResponse{Err: err}, nil
+		}
+
+		// Get limit and offset
+		limit, err := pagination.GetLimitOption(reqForm.Limit, 20)
+		if err != nil {
+			return ViewAllFilmsResponse{Err: err}, err
+		}
+
+		// Get offset from HTTP request
+		offset, err := pagination.GetOffsetOption(reqForm.Offset)
+		if err != nil {
+			return ViewAllFilmsResponse{Err: err}, err
+		}
+
+		// Get filters from HTTP request
+		myFilters, err := getFilterOptions(reqForm)
+		if err != nil {
+			return ViewAllFilmsResponse{Err: err}, nil
+		}
+
+		// Build FilterSortLimit
+		filterSortLimit := builder.
+			SetSort(sortOption).
+			SetFilter(myFilters).
+			SetLimit(limit).
+			SetOffset(offset).
+			Build()
+
+		if items, p, errViewAllFilms := s.ViewAllFilms(ctx, filterSortLimit); errViewAllFilms != nil {
 			return ViewAllFilmsResponse{Err: errViewAllFilms}, nil
 		} else {
 			return ViewAllFilmsResponse{
@@ -32,7 +76,48 @@ func MakeViewAllFilmsEndpoint(s domain.Service) endpoint.Endpoint {
 
 // ViewAllFilmsRequest is a request for ViewAllFilms.
 type ViewAllFilmsRequest struct {
-	FilterSortLimit query.FilterSortLimit
+	Sort        string   `json:"sort" validate:"omitempty,min=3,max=30" example:"title.asc"`
+	Limit       int      `json:"limit" validate:"omitempty,min=1,max=100" example:"10"`
+	Offset      int      `json:"offset" validate:"omitempty,min=0" example:"0"`
+	Title       string   `json:"title" validate:"omitempty,min=3,max=30" example:"Garry Potter"`
+	ReleaseDate string   `json:"release_date" validate:"omitempty,customDate,customRangeDate" example:"2021-01-01,2021-12-31:2022-01-01"`
+	Genres      []string `json:"genres" validate:"omitempty,min=1,max=5,dive,min=3,max=100" example:"action,adventure,sci-fi"`
+}
+
+// Validate is a method to validate form.
+func (r *ViewAllFilmsRequest) Validate() error {
+	// Get custom validator
+	customValidator, err := validation.GetValidator()
+	if err != nil {
+		return err
+	}
+
+	// Register custom validator "customDate"
+	err = customValidator.GetValidate().RegisterValidation("customDate", CustomDateValidator)
+	if err != nil {
+		return err
+	}
+
+	// Register custom validator "customRangeDate"
+	err = customValidator.GetValidate().RegisterValidation("customRangeDate", CustomDateRangeValidator)
+	if err != nil {
+		return err
+	}
+
+	// Add translation for "customDate"
+	err = customValidator.AddTranslation("customDate", fmt.Sprintf("{0} must be valid (YYYY-MM-DD or YYYY-MM-DD:YYYY-MM-DD)"))
+	if err != nil {
+		return err
+	}
+
+	// Add translation for "customRangeDate"
+	err = customValidator.AddTranslation("customRangeDate", fmt.Sprintf("{0} must be valid the first date must be less than the second date"))
+	if err != nil {
+		return err
+	}
+
+	// Validate form
+	return customValidator.Validate(r)
 }
 
 // ViewAllFilmsResponse is a response for ViewAllFilms.
@@ -50,9 +135,9 @@ type ItemAllFilms struct {
 	UUID        uuid.UUID `json:"uuid"`
 	Title       string    `json:"title"`
 	Director    string    `json:"director"`
+	Genres      []string  `json:"genres"`
 	ReleaseDate string    `json:"release_date"`
 	Cast        string    `json:"cast"`
-	Genre       Genre     `json:"genre"`
 	Synopsis    string    `json:"synopsis"`
 	CreatedAt   string    `json:"created_at"`
 	UpdatedAt   string    `json:"updated_at"`
@@ -67,9 +152,9 @@ func domainAllFilmItemsToAllItemFilms(items []models.Film) []ItemAllFilms {
 			UUID:        item.UUID,
 			Title:       item.Title,
 			Director:    item.Director,
+			Genres:      convertGenresToStrings(item.Genres),
 			ReleaseDate: item.ReleaseDate.Format(time.DateOnly),
 			Cast:        item.Cast,
-			Genre:       GenreFromEnum(item.Genre),
 			Synopsis:    item.Synopsis,
 			CreatedAt:   time.Unix(item.CreatedAt, 0).Format(time.DateTime),
 			UpdatedAt:   time.Unix(item.UpdatedAt, 0).Format(time.DateTime),
@@ -77,4 +162,45 @@ func domainAllFilmItemsToAllItemFilms(items []models.Film) []ItemAllFilms {
 	}
 
 	return films
+}
+
+// convertGenresToStrings is a function to convert genres to strings.
+func convertGenresToStrings(genres []models.Genre) []string {
+	genreNames := make([]string, len(genres))
+
+	for i, genre := range genres {
+		genreNames[i] = genre.Name
+	}
+
+	return genreNames
+}
+
+// getFilterOptions is a function to get filter options.
+func getFilterOptions(reqForm ViewAllFilmsRequest) (query.Filter, error) {
+	myFilter := make(query.Filter)
+
+	// set release_date
+	if reqForm.ReleaseDate != "" {
+		if strings.Contains(reqForm.ReleaseDate, ":") {
+			split := strings.Split(reqForm.ReleaseDate, ":")
+			if len(split) != 2 {
+				return nil, validation.CustomError{Field: "release_date", Err: fmt.Errorf("invalid date range format: %s", reqForm.ReleaseDate)}
+			}
+			myFilter["release_date"] = []string{split[0], split[1]}
+		} else {
+			myFilter["release_date"] = reqForm.ReleaseDate
+		}
+	}
+
+	// set title
+	if reqForm.Title != "" {
+		myFilter["title"] = reqForm.Title
+	}
+
+	// set genres
+	if len(reqForm.Genres) > 0 {
+		myFilter["genres"] = reqForm.Genres
+	}
+
+	return myFilter, nil
 }
